; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_write_constructor.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_write_constructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_constructor = type { i32 }

@schema_version = common dso_local global i32 0, align 4
@TLS_COMBINATOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_constructor(%struct.tl_constructor* %0) #0 {
  %2 = alloca %struct.tl_constructor*, align 8
  store %struct.tl_constructor* %0, %struct.tl_constructor** %2, align 8
  %3 = load i32, i32* @schema_version, align 4
  %4 = icmp sge i32 %3, 1
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = load i32, i32* @TLS_COMBINATOR, align 4
  br label %8

7:                                                ; preds = %1
  br label %8

8:                                                ; preds = %7, %5
  %9 = phi i32 [ %6, %5 ], [ 2, %7 ]
  %10 = call i32 @wint(i32 %9)
  %11 = load %struct.tl_constructor*, %struct.tl_constructor** %2, align 8
  %12 = call i32 @write_combinator(%struct.tl_constructor* %11)
  ret void
}

declare dso_local i32 @wint(i32) #1

declare dso_local i32 @write_combinator(%struct.tl_constructor*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
